Agregue redes sociales

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p class="project-description">
                         FYPOS, es un sistema POS que permitirá tener de manera organizada el inventario de productos, acelerar el proceso de venta, generar estadísticas que nos permita conocer los productos más demandados por los clientes, almacenar información de proveedores y registrar usuarios.
                     </p>
-                    <p class="project-url">Lo encuentrás <a href="#">aquí</a></p>
+                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/SistemaPOS">aquí</a></p>
                 </div>
                 <picture>
                     <img  src="https://i.ibb.co/3c2CNst/pos.png" alt="project-image1">
@@ -93,7 +93,7 @@
                     <h3 class="project-title">GYM</h3>
                     <p class="project-languaje">Java / MySQL</p>
                     <p class="project-description">Descripción</p>
-                    <p class="project-url">Lo encuentrás <a href="#">aquí</a></p>
+                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/">aquí</a></p>
                 </div>
                 <picture>
                     <img  src="https://i.ibb.co/kK8NL2r/gym.png" alt="project-image2">
@@ -107,10 +107,10 @@
                 <button>Enviar</button>
             </form>
             <div class="social">
-                <a href="#"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
-                <a href="#"><img src="images/facebook.svg" alt="" width="50px" height="50px"></a>
-                <a href="#"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
-                <a href="#"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://twitter.com/smontenegroc"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
+                <!--<a href="https://www.facebook.com/smontenegro95"><img src="images/facebook.svg" alt="" width="50px" height="50px"></a>-->
+                <a href="https://github.com/smontenegro95/"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://www.instagram.com/smontenegro95/"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
             </div>
         </section>
     </main>
