--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://i.ibb.co/Tw2Ldb5/favicon.png" alt="favicon"/>
     <title>Sergio Montenegro</title>
 </head>
 <body>
@@ -82,7 +83,7 @@
                     <p class="project-description">
                         FYPOS, es un sistema POS que permitirá tener de manera organizada el inventario de productos, acelerar el proceso de venta, generar estadísticas que nos permita conocer los productos más demandados por los clientes, almacenar información de proveedores y registrar usuarios.
                     </p>
-                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/SistemaPOS">aquí</a></p>
+                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/SistemaPOS" target="_blank">aquí</a></p>
                 </div>
                 <picture>
                     <img  src="https://i.ibb.co/3c2CNst/pos.png" alt="project-image1">
@@ -92,8 +93,8 @@
                 <div class="project-detail">
                     <h3 class="project-title">GYM</h3>
                     <p class="project-languaje">Java / MySQL</p>
-                    <p class="project-description">Descripción</p>
-                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/">aquí</a></p>
+                    <p class="project-description">Software con entorno de escritorio que permite gestionar las operaciones de un gimnasio</p>
+                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/" target="_blank">aquí</a></p>
                 </div>
                 <picture>
                     <img  src="https://i.ibb.co/kK8NL2r/gym.png" alt="project-image2">
@@ -107,10 +108,10 @@
                 <button>Enviar</button>
             </form>
             <div class="social">
-                <a href="https://twitter.com/smontenegroc"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
+                <a href="https://twitter.com/smontenegroc" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
                 <!--<a href="https://www.facebook.com/smontenegro95"><img src="images/facebook.svg" alt="" width="50px" height="50px"></a>-->
-                <a href="https://github.com/smontenegro95/"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
-                <a href="https://www.instagram.com/smontenegro95/"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://github.com/smontenegro95/" target="_blank"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://www.instagram.com/smontenegro95/" target="_blank"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
             </div>
         </section>
     </main>
