--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 <button>Enviar</button>
             </form>
             <div class="social">
-                <a href="https://twitter.com/smontenegroc" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
-                <!--<a href="https://www.facebook.com/smontenegro95"><img src="images/facebook.svg" alt="" width="50px" height="50px"></a>-->
-                <a href="https://github.com/smontenegro95/" target="_blank"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
-                <a href="https://www.instagram.com/smontenegro95/" target="_blank"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://twitter.co" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
+                <a href="https://www.facebook.com"><img src="images/facebook.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://github.com/smontenegro95" target="_blank"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
             </div>
         </section>
     </main>
