--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="https://i.ibb.co/YpT6nVY/logo.png" alt="logo">
         </figure>
         <div class="container-menu">
-            <div class="menu-icon" onclick="menu(this)">
+            <div class="menu-icon" onclick="mostrar_menu(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
@@ -111,9 +111,8 @@
         <section class="contact" id="contacto">
             <form class="form-mail">
                 <h3>contacto</h3>
-                <input type="text" name="" class="txtMail" id="txtMail" placeholder="Déjame tu email">
-                <!-- <button class="enviarMail" id="enviarMail" onclick="correo();">Enviar</button> -->
-                <input type="button" class="enviarMail" id="enviarMail" value="Enviar" onclick="correo();">
+                <input type="mail" name="" class="txtMail" id="txtMail" placeholder="Déjame tu email">
+                <input type="button" class="enviarMail" id="enviarMail" value="Enviar" onclick="obtener_correo();">
             </form>
             <div class="social">
                 <a href="https://twitter.co" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
