--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <img src="https://i.ibb.co/YpT6nVY/logo.png" alt="logo">
         </figure>
         <div class="container-menu">
-            <div class="menu-icon" onclick="mostrar_menu(this)">
+            <div class="menu-icon" id="menu-icon" onclick="mostrar_menu(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
             </div>
             <nav class="menu" id="menu">
-                <ul>
+                <ul id="menu-item">
                     <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="#portafolio">Portafolio</a></li>
                     <li><a href="#contacto">Contacto</a></li>
