[MODIFY] Los enlaces de proyectos

--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
                     <p class="project-description">
                         FYPOS, es un sistema POS que permitirá tener de manera organizada el inventario de productos, acelerar el proceso de venta, generar estadísticas que nos permita conocer los productos más demandados por los clientes, almacenar información de proveedores y registrar usuarios.
                     </p>
-                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/SistemaPOS" target="_blank">aquí</a></p>
+                    <a class="project-url" href="https://github.com/smontenegro95/SistemaPOS" target="_blank">Ver proyecto</a>
                 </div>
-                <picture>
-                    <img  src="https://i.ibb.co/3c2CNst/pos.png" alt="project-image1">
+                <picture class="project-image">
+                    <img  src="https://i.ibb.co/3c2CNst/pos.png" alt="fypos">
                 </picture>
             </article>
             <article class="project-item">
                 <div class="project-detail">
                     <h3 class="project-title">GYM</h3>
                     <p class="project-languaje">Java / MySQL</p>
-                    <p class="project-description">Software con entorno de escritorio que permite gestionar las operaciones de un gimnasio</p>
-                    <p class="project-url">Lo encuentrás <a href="https://github.com/smontenegro95/" target="_blank">aquí</a></p>
+                    <p class="project-description">Software con entorno de escritorio que permite gestionar las operaciones de un gimnasio.</p>
+                    <a class="project-url" href="https://github.com/smontenegro95/" target="_blank">Ver proyecto</a>
                 </div>
-                <picture>
-                    <img  src="https://i.ibb.co/kK8NL2r/gym.png" alt="project-image2">
+                <picture class="project-image">
+                    <img src="https://i.ibb.co/c12BCRY/gym.png" alt="gym">
                 </picture>
             </article>
         </section>
