--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="https://i.ibb.co/YpT6nVY/logo.png" alt="logo">
         </figure>
         <div class="container-menu">
-            <div class="menu-icon" id="menu-icon" onclick="mostrar_menu()">
+            <div class="menu-icon" id="menu-icon">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
