algunas modificaciones en el css, index y js

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
             <form class="form-mail" name="form-mail">
                 <h3>contacto</h3>
                 <input type="mail" name="txtMail" class="txtMail" id="txtMail" placeholder="Déjame tu email">
-                <input type="button" class="enviarMail" id="enviarMail" value="Enviar" onclick="obtener_correo();">
+                <!-- <input type="button" class="enviarMail" id="enviarMail" value="Enviar" onclick="obtener_correo();"> -->
+                <button type="submit" class="enviarMail" id="enviarMail">Enviar</button>
             </form>
             <div class="social">
                 <a href="https://twitter.co" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
