[MODIFY] validación correo y titulos a las imagenes

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
             <div class="skills-second">
                 <article>
                     <picture>
-                        <img src="images/git.svg" alt="git" width="60px" height="60px">
+                        <img src="images/git.svg" alt="git" width="60px" height="60px" title="Git">
                     </picture>
                 </article>
                 <article>
                     <picture>
-                        <img src="images/php-brands.svg" alt="php" width="60px" height="60px">
+                        <img src="images/php-brands.svg" alt="php" width="60px" height="60px" title="php">
                     </picture>
                 </article>
                 <article>
                     <picture>
-                        <img src="images/java-brands.svg" alt="java" width="60px" height="60px">
+                        <img src="images/java-brands.svg" alt="java" width="60px" height="60px" title="Java">
                     </picture>
                 </article>
                 <article>
                     <picture>
-                        <img src="images/database-solid.svg" alt="database" width="60px" height="60px">
+                        <img src="images/database-solid.svg" alt="database" width="60px" height="60px" title="mysql">
                     </picture>
                 </article>
             </div>
