[ADD] almacenar datos en firebase

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.ibb.co/Tw2Ldb5/favicon.png" alt="favicon"/>
     <title>Sergio Montenegro</title>
+    <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-firestore.js"></script>
 </head>
 <body>
     <header class="header">
@@ -109,10 +111,10 @@
             </article>
         </section>
         <section class="contact" id="contacto">
-            <form class="form-mail" name="form-mail">
+            <form class="form-mail" name="form-mail" id="form-mail">
                 <h3>contacto</h3>
                 <input type="mail" name="txtMail" class="txtMail" id="txtMail" placeholder="Déjame tu email">
-                <button type="submit" class="enviarMail" id="enviarMail">Enviar</button>
+                <button type="submit" class="enviarMail">Enviar</button>
             </form>
             <div class="social">
                 <a href="https://twitter.co" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
