--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <p class="project-description">
                         FYPOS, es un sistema POS que permitirá tener de manera organizada el inventario de productos, acelerar el proceso de venta, generar estadísticas que nos permita conocer los productos más demandados por los clientes, almacenar información de proveedores y registrar usuarios.
                     </p>
-                    <a class="project-url" href="https://github.com/smontenegro95/SistemaPOS" target="_blank">Ver proyecto</a>
+                    <a class="project-url" href="https://github.com/smontenegroc/SistemaPOS" target="_blank">Ver proyecto</a>
                 </div>
                 <picture class="project-image">
                     <img  src="https://i.ibb.co/3c2CNst/pos.png" alt="fypos">
@@ -103,7 +103,7 @@
                     <h3 class="project-title">GYM</h3>
                     <p class="project-languaje">Java / MySQL</p>
                     <p class="project-description">Software con entorno de escritorio que permite gestionar las operaciones de un gimnasio.</p>
-                    <a class="project-url" href="https://github.com/smontenegro95/" target="_blank">Ver proyecto</a>
+                    <a class="project-url" href="https://github.com/smontenegroc/" target="_blank">Ver proyecto</a>
                 </div>
                 <picture class="project-image">
                     <img src="https://i.ibb.co/c12BCRY/gym.png" alt="gym">
@@ -119,7 +119,7 @@
             <div class="social">
                 <a href="https://twitter.co" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
                 <a href="https://www.facebook.com"><img src="images/facebook.svg" alt="" width="50px" height="50px"></a>
-                <a href="https://github.com/smontenegro95" target="_blank"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
+                <a href="https://github.com/smontenegroc" target="_blank"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
                 <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
             </div>
         </section>        
