--- a/index.html
+++ b/index.html
@@ -1,133 +1,215 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://i.ibb.co/Tw2Ldb5/favicon.png" alt="favicon"/>
-        <title>Sergio Montenegro</title>
-        <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-firestore.js"></script>
-    </head>
-    <body>
-        <header class="header">
-            <figure class="logo">
-                <img src="https://i.ibb.co/YpT6nVY/logo.png" alt="logo">
-            </figure>
-            <div class="container-menu">
-                <div class="menu-icon" id="menu-icon">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                </div>
-                <nav class="menu" id="menu">
-                    <ul id="menu-item">
-                        <li><a href="#habilidades">Habilidades</a></li>
-                        <li><a href="#portafolio">Portafolio</a></li>
-                        <li><a href="#contacto">Contacto</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <main>
-            <section class="hero">
-                <h1>Soy <strong>Sergio Montenegro</strong>,<br> desarrollador <strong>Web</strong></h1>
-                <picture>
-                    <img src="https://i.ibb.co/kHVdDDm/principal.jpg" alt="hero">
-                </picture>
-            </section>
-            <section class="skills" id="habilidades">
-                <h2>Habilidades</h2>
-                <div class="skills-main">
-                    <article class="skills-items">
-                        <figure>
-                            <img src="images/html5-brands.svg" alt="skill1" width="150px" height="150px">
-                        </figure>
-                        <p>html</p>
-                    </article >
-                    <article class="skills-items">
-                        <figure>
-                            <img src="images/css3-alt-brands.svg" alt="skill2" width="150px" height="150px">
-                        </figure>
-                        <p>css</p>
-                    </article>
-                    <article class="skills-items">
-                        <figure>
-                            <img src="images/js-square-brands.svg" alt="skill3" width="150px" height="150px">
-                        </figure>
-                        <p>JavaScript</p>
-                    </article>
-                </div>
-                <h3>Otras</h3>
-                <div class="skills-second">
-                    <article>
-                        <picture>
-                            <img src="images/git.svg" alt="git" width="60px" height="60px" title="Git">
-                        </picture>
-                    </article>
-                    <article>
-                        <picture>
-                            <img src="images/php-brands.svg" alt="php" width="60px" height="60px" title="php">
-                        </picture>
-                    </article>
-                    <article>
-                        <picture>
-                            <img src="images/java-brands.svg" alt="java" width="60px" height="60px" title="Java">
-                        </picture>
-                    </article>
-                    <article>
-                        <picture>
-                            <img src="images/database-solid.svg" alt="database" width="60px" height="60px" title="mysql">
-                        </picture>
-                    </article>
-                </div>
-            </section>
-            <section class="projects" id="portafolio">
-                <h2>Proyectos destacados</h2>
-                <article class="project-item">
-                    <div class="project-detail">
-                        <h3 class="project-title">FYPOS</h3>
-                        <p class="project-languaje">html5 / php /Mysql</p>
-                        <p class="project-description">
-                            FYPOS, es un sistema POS que permitirá tener de manera organizada el inventario de productos, acelerar el proceso de venta, generar estadísticas que nos permita conocer los productos más demandados por los clientes, almacenar información de proveedores y registrar usuarios.
-                        </p>
-                        <a class="project-url" href="https://github.com/smontenegroc/SistemaPOS" target="_blank">Ver proyecto</a>
-                    </div>
-                    <picture class="project-image">
-                        <img  src="https://i.ibb.co/3c2CNst/pos.png" alt="fypos">
-                    </picture>
-                </article>
-                <article class="project-item">
-                    <div class="project-detail">
-                        <h3 class="project-title">GYM</h3>
-                        <p class="project-languaje">Java / MySQL</p>
-                        <p class="project-description">Software con entorno de escritorio que permite gestionar las operaciones de un gimnasio.</p>
-                        <a class="project-url" href="https://github.com/smontenegroc/" target="_blank">Ver proyecto</a>
-                    </div>
-                    <picture class="project-image">
-                        <img src="https://i.ibb.co/c12BCRY/gym.png" alt="gym">
-                    </picture>
-                </article>
-            </section>
-            <section class="contact" id="contacto">
-                <form class="form-mail" name="form-mail" id="form-mail">
-                    <h3>contacto</h3>
-                    <input type="mail" name="txtMail" class="txtMail" id="txtMail" placeholder="Déjame tu email">
-                    <button type="submit" class="enviarMail">Enviar</button>
-                </form>
-                <div class="social">
-                    <a href="https://twitter.co" target="_blank"><img src="images/twitter.svg" width="50px" height="50px" alt=""></a>
-                    <a href="https://www.facebook.com"><img src="images/facebook.svg" alt="" width="50px" height="50px"></a>
-                    <a href="https://github.com/smontenegroc" target="_blank"><img src="images/github.svg" alt="" width="50px" height="50px"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="" width="50px" height="50px"></a>
-                </div>
-            </section>        
-        </main>
-        <footer class="footer">
-            <p>Desarrollado por Sergio Montenegro</p>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/styles.css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			href="https://i.ibb.co/Tw2Ldb5/favicon.png"
+			alt="favicon"
+		/>
+		<title>Sergio Montenegro</title>
+		<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-firestore.js"></script>
+	</head>
+	<body>
+		<header class="header">
+			<figure class="logo">
+				<img src="https://i.ibb.co/YpT6nVY/logo.png" alt="logo" />
+			</figure>
+			<div class="container-menu">
+				<div class="menu-icon" id="menu-icon">
+					<div class="bar1"></div>
+					<div class="bar2"></div>
+					<div class="bar3"></div>
+				</div>
+				<nav class="menu" id="menu">
+					<ul id="menu-item">
+						<li><a href="#habilidades">Habilidades</a></li>
+						<li><a href="#portafolio">Portafolio</a></li>
+						<li><a href="#contacto">Contacto</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<section class="hero">
+				<h1>
+					Soy <strong>Sergio Montenegro</strong>,<br />
+					desarrollador <strong>Web</strong>
+				</h1>
+				<picture>
+					<img src="https://i.ibb.co/kHVdDDm/principal.jpg" alt="hero" />
+				</picture>
+			</section>
+			<section class="skills" id="habilidades">
+				<h2>Habilidades</h2>
+				<div class="skills-main">
+					<article class="skills-items">
+						<figure>
+							<img
+								src="images/html5-brands.svg"
+								alt="skill1"
+								width="150px"
+								height="150px"
+							/>
+						</figure>
+						<p>html</p>
+					</article>
+					<article class="skills-items">
+						<figure>
+							<img
+								src="images/css3-alt-brands.svg"
+								alt="skill2"
+								width="150px"
+								height="150px"
+							/>
+						</figure>
+						<p>css</p>
+					</article>
+					<article class="skills-items">
+						<figure>
+							<img
+								src="images/js-square-brands.svg"
+								alt="skill3"
+								width="150px"
+								height="150px"
+							/>
+						</figure>
+						<p>JavaScript</p>
+					</article>
+				</div>
+				<h3>Otras</h3>
+				<div class="skills-second">
+					<article>
+						<picture>
+							<img
+								src="images/git.svg"
+								alt="git"
+								width="60px"
+								height="60px"
+								title="Git"
+							/>
+						</picture>
+					</article>
+					<article>
+						<picture>
+							<img
+								src="images/php-brands.svg"
+								alt="php"
+								width="60px"
+								height="60px"
+								title="php"
+							/>
+						</picture>
+					</article>
+					<article>
+						<picture>
+							<img
+								src="images/java-brands.svg"
+								alt="java"
+								width="60px"
+								height="60px"
+								title="Java"
+							/>
+						</picture>
+					</article>
+					<article>
+						<picture>
+							<img
+								src="images/database-solid.svg"
+								alt="database"
+								width="60px"
+								height="60px"
+								title="mysql"
+							/>
+						</picture>
+					</article>
+				</div>
+			</section>
+			<section class="projects" id="portafolio">
+				<h2>Proyectos destacados</h2>
+				<article class="project-item">
+					<div class="project-detail">
+						<h3 class="project-title">FYPOS</h3>
+						<p class="project-languaje">html5 / php /Mysql</p>
+						<p class="project-description">
+							FYPOS, es un sistema POS que permitirá tener de manera organizada
+							el inventario de productos, acelerar el proceso de venta, generar
+							estadísticas que nos permita conocer los productos más demandados
+							por los clientes, almacenar información de proveedores y registrar
+							usuarios.
+						</p>
+						<a
+							class="project-url"
+							href="https://github.com/smontenegroc"
+							target="_blank"
+							>Ver proyecto</a
+						>
+					</div>
+					<picture class="project-image">
+						<img src="https://i.ibb.co/3c2CNst/pos.png" alt="fypos" />
+					</picture>
+				</article>
+				<article class="project-item">
+					<div class="project-detail">
+						<h3 class="project-title">GYM</h3>
+						<p class="project-languaje">Java / MySQL</p>
+						<p class="project-description">
+							Software con entorno de escritorio que permite gestionar las
+							operaciones de un gimnasio.
+						</p>
+						<a
+							class="project-url"
+							href="https://github.com/smontenegroc/"
+							target="_blank"
+							>Ver proyecto</a
+						>
+					</div>
+					<picture class="project-image">
+						<img src="https://i.ibb.co/c12BCRY/gym.png" alt="gym" />
+					</picture>
+				</article>
+			</section>
+			<section class="contact" id="contacto">
+				<form class="form-mail" name="form-mail" id="form-mail">
+					<h3>contacto</h3>
+					<input
+						type="mail"
+						name="txtMail"
+						class="txtMail"
+						id="txtMail"
+						placeholder="Déjame tu email"
+					/>
+					<button type="submit" class="enviarMail">Enviar</button>
+				</form>
+				<div class="social">
+					<a href="https://twitter.co/smontenegroc" target="_blank"
+						><img src="images/twitter.svg" width="50px" height="50px" alt=""
+					/></a>
+					<a href="#"
+						><img src="images/facebook.svg" alt="" width="50px" height="50px"
+					/></a>
+					<a href="https://github.com/smontenegroc" target="_blank"
+						><img src="images/github.svg" alt="" width="50px" height="50px"
+					/></a>
+					<a href="#" target="_blank"
+						><img src="images/instagram.svg" alt="" width="50px" height="50px"
+					/></a>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+			<p>Desarrollado por Sergio Montenegro</p>
+		</footer>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+        <div id="ultimo"></div>
+	</body>
 </html>
