--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
 		<main>
 			<section class="hero">
 				<h1>
-					Soy <strong>Sergio Montenegro</strong>,<br />
+					<strong>Sergio Montenegro</strong>,<br />
 					desarrollador <strong>Web</strong>
 				</h1>
-				<picture>
-					<img src="https://i.ibb.co/kHVdDDm/principal.jpg" alt="hero" />
-				</picture>
 			</section>
 			<section class="skills" id="habilidades">
 				<h2>Habilidades</h2>
@@ -190,17 +187,14 @@
 					<button type="submit" class="enviarMail">Enviar</button>
 				</form>
 				<div class="social">
-					<a href="https://twitter.co/smontenegroc" target="_blank"
-						><img src="images/twitter.svg" width="50px" height="50px" alt=""
-					/></a>
-					<a href="#"
-						><img src="images/facebook.svg" alt="" width="50px" height="50px"
+					<a href="https://linkedin.com/in/smontenegroc" target="_blank"
+						><img src="images/linkedin.svg" width="50px" height="50px" alt=""
 					/></a>
 					<a href="https://github.com/smontenegroc" target="_blank"
 						><img src="images/github.svg" alt="" width="50px" height="50px"
 					/></a>
-					<a href="#" target="_blank"
-						><img src="images/instagram.svg" alt="" width="50px" height="50px"
+					<a href="https://gitlab.com/smontenegroc" target="_blank"
+						><img src="images/gitlab.svg" alt="" width="50px" height="50px"
 					/></a>
 				</div>
 			</section>
